Fixing CSS issues on Mobile and tablets.

--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,22 @@ p {
   line-height: 2rem;
   font-family: 'Quicksand', sans-serif;
 }
+/*Text above book now*/
+#hair_skin_nails {
+  height: 20px;
+  width: 932px;
+}
 
 .button-collapse {
   color: #26a69a;
 }
-
+#img-responsive-height
+{
+  display: block;
+  width: 600px;
+  max-height: 100%;
+  height: 330px;
+}
 .parallax-container {
   min-height: 380px;
   line-height: 0;
@@ -37,7 +48,7 @@ p {
   .parallax-container .section {
     width: 100%;
   }
-
+/*CSS For iPads/Tablets*/
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
@@ -46,14 +57,35 @@ p {
   #index-banner .section {
     top: 10%;
   }
+  #img-responsive-height {
+    display: block;
+    width: 300px;
+    max-height: 100%;
+    height: 400px;
+  }
+  #hair_skin_nails {
+    height: 20px;
+    width: 700px;
+  }
 }
-
+/*Phone CSS*/
 @media only screen and (max-width : 600px) {
   #index-banner .section {
     top: 0;
   }
   #bookingLogo {
     display: none;
+  }
+  #img-responsive-height {
+    display: block;
+    width: 300px;
+    max-height: 100%;
+    height: 400px;
+  }
+  /*Text above book now*/
+  #hair_skin_nails {
+    height: 20px;
+    width: 400px;
   }
 }
 
@@ -87,4 +119,10 @@ font-family: 'Josefin Slab', serif;
 }
 h5 {
   font-family: 'Josefin Slab', serif;
+}
+
+.col.s12 > .btn {
+  width: 100%;
+  /*Box shadow gives white padding*/
+  box-shadow: inset 0 0 0 3px white;
 }
